[package]
name = "random"
version = "0.1.0"
authors = ["aarotoiv <aaro.toivonen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="*"
piston = "*"
piston_window = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
find_folder="*"